# TUIAppTemplate

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  release.yml
docs/: TEMPLATE_GUIDE.md
scripts/: dev_setup.ps1
src/tui_template/: __main__.py  app.py  app.tcss  cli.py  storage.py  web.py
src/tui_template/assets/: logo.txt
src/tui_template/core/: __init__.py  models.py
tests/: test_app_assets.py  test_cli.py  test_storage.py  test_web.py
